--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <div class="main">
     <header>
-        <span>BitShow</span>
-        <input type="text" placeholder="Search">
+        <span class="logo">Bit Show</span>
+        <input class="search" type="text" placeholder="Search">
     </header>
-    <h5 class="headerShow">Popular Shows</h5>
+   
 </div>
 
 <footer>
